# med_system

./: Dockerfile  README.md  docker-compose.yml  openapi.yml  pyproject.toml  requirements.tx  requirements.txt
app/: config.py  database.py  exception.py  logger.py  main.py  seed_db.py  tables_for_session_4.py
app/.git_root/: COMMIT_EDITMSG  config  index
app/.git_root/refs/heads/: master
app/dao/: base.py
app/doctors/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
app/hospitalization/: dao.py  models.py  router.py  schemas.py
app/location/: dao.py  models.py  redis_con.py  router.py  schemas.py  utils.py
app/med_procedure/: dao.py  models.py  router.py  schemas.py
app/migration/: env.py
app/migration/versions/: 05c0547b2211_change_date.py  27653de3141e_craete_fields_voice_comment_file_med_.py  5761a3ec8205_create_table.py  5ec2234e1db8_change_date.py  6c32adee6837_change_date.py  79d0236498bb_change_date.py
app/pages/: router.py
app/patients/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  utils.py
app/static/document/: consent.docx  consent2.docx  contract.docx  contract2.docx
app/static/js/: script.js
app/static/med_procedure_files/: file_1.docx  file_2.docx
app/templates/: add_hospitalizations.html  add_med_procedure.html  add_patient.html  base.html  current_hosp.html  current_med_procedure.html  graph.html  hospital_cabinets.html  login.html  lst_hosp.html  lst_med_procedure.html  lst_patients.html  main_doctor.html  patient_profile.html
docx/: endpoints.md  openapi.yml
(+2 files in other folders)
