[project]
name = "med-servies-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.12",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "asyncpg==0.30.0",
    "docxtpl>=0.20.0",
    "fastapi[all]>=0.115.12",
    "jose>=1.0.0",
    "markupsafe>=3.0.2",
    "opencv-python>=4.11.0.86",
    "passlib>=1.7.4",
    "python-docx>=1.1.2",
    "python-jose>=3.5.0",
    "python-json-logger>=3.3.0",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "redis>=6.2.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]
